# aoptk

./: .copier-answers.yml  .env.example  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.dev.md  README.md  chemical.py  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  publish.yml  sonarcloud.yml
docs/: Makefile  abstract_analysis.ipynb  conf.py  fibrosis_use_case.py  index.rst  make.bat  usecase.ipynb
examples/: download_abstracts.py  download_pdfs.py  download_publications.py  find_chemicals.py  find_chemicals_relationships.py  parse_pdfs.py  query_literature.py
src/aoptk/: abbreviation_translator.py  abbreviation_translator_dictionary.py  abbreviation_translator_dictionary_generator.py  abstract.py  chemical.py  cleaning.py  effect.py  europepmc.py  europepmc_abstract.py  europepmc_data_provider.py  europepmc_pdf.py  find_chemical.py  find_relationship.py  generate_slides.py  get_abstract.py  get_europepmc_publication.py  get_pdf.py  get_publication.py  get_publication_data.py  html_tag_remover.py  id.py  inject_text_generation.py  interfaces.py  mesh_terms.py  my_module.py  normalize_chemical.py  parse_pdf.py  pdf.py  pdf_parser.py  provide_mesh_term_dataframe_from_csv.py  provide_mesh_term_dataframe_from_xml.py  provide_normalization_dataframe.py  pubchem_abbreviations.py  pubchem_synonyms.py  publication.py  publication_parser.py  pubmed.py  pymupdf_parser.py  regex_sentence_generator.py  relationship.py  (+15 more)
src/aoptk/abbreviations/: abbreviation_translator_dictionary.py
src/aoptk/application/: chemical_identifier.py  publication_tracker.py
src/aoptk/cleaning/: html_tag_remover.py  text_cleaner.py
src/aoptk/literature/: abstract.py  convert_image.py  convert_pdf_scan.py  find_relevant_publication.py  get_abstract.py  get_id.py  get_metadata.py  get_pdf.py  get_publication.py  get_publication_metadata.py  id.py  metadata.py  pdf.py  pdf_parser.py  publication.py  publication_metadata.py  pymupdf_parser.py  query.py  utils.py
src/aoptk/normalization/: mesh_terms.py  provide_mesh_term_dataframe_from_xml.py  provide_normalization_dataframe.py  pubchem_abbreviation_short.py  pubchem_abbreviation_uppercase.py  pubchem_abbreviations.py  pubchem_api.py  pubchem_local.py  pubchem_synonyms.py
src/aoptk/prompts/: categorize_text_prompt.txt  chemical_prompt.txt  convert_image_prompt.txt  convert_pdf_scan_prompt.txt  find_relevant_publications_prompt.txt  normalization_prompt.txt  relationship_text_images_prompt.txt  relationship_text_prompt.txt  relationships_table_prompt.txt
src/aoptk/relationships/: __init__.py  find_relationship.py  relationship.py  relationship_type.py  zero_shot_classification.py  zero_shot_classification_multiple.py  zero_shot_classification_single.py
tests/: conftest.py  test_abbreviation_translator_dictionary.py  test_abbreviation_translator_dictionary_generator.py  test_aop_wiki.py  test_chemical.py  test_cleaning.py  test_europepmc.py  test_europepmc_abstract.py  test_europepmc_data_provider.py  test_europepmc_mocked.py  test_europepmc_pdf.py  test_find_chemical.py  test_generate_slides.py  test_get_europepmc_publication.py  test_html_tag_remover.py  test_id.py  test_literature_utils.py  test_mesh_terms.py  test_mesh_terms_database.csv  test_metadata.py  test_my_module.py  test_parse_pdf.py  test_pdf_parser.py  test_pmc.py  test_provide_mesh_term_dataframe_from_csv.py  test_provide_mesh_term_dataframe_from_xml.py  test_pubchem_abbreviation_short.py  test_pubchem_abbreviation_uppercase.py  test_pubchem_abbreviations.py  test_pubchem_api.py  test_pubchem_local.py  test_pubchem_synonyms.py  test_publication_parser.py  test_pubmed.py  test_pubmed_mocked.py  test_pymupdf_parser.py  test_regex_sentence_generator.py  test_scispacy_find_chemical.py  test_spacy.py  test_spacy_pdf_processor.py  (+10 more)
tests/test-data/: europepmc_metadata.json  ncbi_metadata.json  scan_base64_image_PMC12416454.txt  test_pdf_base64_image.txt
tests/test_data/: 30784932_abstract.txt  PMC12181427_abstract.txt  PMC12231352_abstract.txt  PMC12416454_abstract.txt  ncbi_metadata.json
tests/test_data/test_figures/: gjic.tif
(+5 files in other folders)
